--- a/index.html
+++ b/index.html
@@ -2,26 +2,27 @@
 <html lang="en">
 <head>
 <title>Personal Portfolio</title>
-<link rel="stylesheet" href="styles.css">
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="styles.css"></link>
 </head>
 <body>
-  <nav id="navbar">
+<nav id="navbar">
 <a href="about.html">About</a>
 <a href="contact.html">Contact</a>
 </nav>
 <br>
 <div id="welcome-section" ><h1>Welcome to my Personal Portfolio </h1></div>
-<br>
+
+<div id="main_body">
 <a href="https://github.com/fuad1235">My Github page</a>
 <div id = "projects"><h2>My Projects</h2>
 <p class ="project-tile">Microverse web development trainning</p>
 <a href="https://fuad1235.github.io/PageHosting/">First web site</a>
 <br>
 <a href="https://fuad1235.github.io/HTMLProject1/">second web site</a>
-<nav id ="navbar">
-  <a id="profile-link" href="#" target ="_blank"></a>
+</div>
+
+<nav id ="footer">
+<a id="profile-link" href="#" target ="_blank"></a>
 </nav>
 </div>
 </body>
